<resources>
    <string name="app_name">Vjezba1</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_btn_login">Login</string>
    <string name="rb_male">Male</string>
    <string name="rb_female">Female</string>
    <string name="str_welcome">Welcome</string>
    <string name="str_label_capture_button">Capture Image</string>
</resources>
