<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="27dp">

        <EditText
            android:id="@+id/ed_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_username"
            android:hint="@string/hint_password"
            android:textSize="20dp" />



        <RadioGroup
            android:id="@+id/rb_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_password">

            <RadioButton
                android:layout_width="match_parent"
                android:text="@string/rb_male"
                android:layout_height="wrap_content"></RadioButton>
            <RadioButton
                android:layout_width="match_parent"
                android:text="@string/rb_female"
                android:layout_height="wrap_content"></RadioButton>
        </RadioGroup>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rb_group"
            android:background="@android:color/holo_blue_light"
            android:text="@string/hint_btn_login"
            android:textColor="@android:color/white"
            android:textSize="12dp"></Button>
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>